fixed right triangle

--- a/app/src/main/assets/css/style.css
+++ b/app/src/main/assets/css/style.css
@@ -1,3 +1,5 @@
+
+
 .bg-black {
   background-color: black !important;
 }
@@ -182,6 +184,10 @@ input[type="button"]:hover {
 .warning {
   color: red;
   font-size: large;
+}
+
+#butCalculate {
+  width: 105px;
 }
 
 @media only screen and (max-width: 400px) {
