--- a/app/src/main/res/layout/fragment_right_triangle.xml
+++ b/app/src/main/res/layout/fragment_right_triangle.xml
@@ -11,5 +11,6 @@
   android:id="@+id/right_triangle"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:layout_marginBottom="60dp"/>
+  android:layout_marginBottom="50dp"
+  android:paddingTop="150dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
